refactor: Added allowed origins as environment variable